Jungolpage main page 로그인

--- a/html/ddd.html
+++ b/html/ddd.html
@@ -14,7 +14,7 @@
     		</div>
     		<div class="memberBtns ">
     				
-    				<a class="textbtn" href="#"><strong>로그인</strong></a>
+    				<a class="textbtn" href="#http://www.jungol.co.kr/bbs/login.php?url=/"><strong>로그인</strong></a>
     				<a class="textBtn" href="#">회원가입</a>
     				<a class="textBtn" href="#">FAQ</a>
     			
